--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
 		"type": "git",
 		"url": "https://github.com/kentos/vsce-move-selection-to-new-file.git"
 	},
+	"bugs": {
+		"url": "https://github.com/kentos/vsce-move-selection-to-new-file/issues"
+	},
 	"displayName": "Move selection to new file",
 	"description": "Move selected text/code to a new file",
 	"version": "1.0.0",
